# Yapper

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  todo.md  yapper.go
cmd/: config.go  root.go  tui.go
cmd/read/: flood.go  read.go  single.go
cmd/subscribe/: catchup.go  persistent.go  subscribe.go
cmd/write/: flood.go  single.go  write.go
internal/config/: config.go
internal/database/: esdb.go
internal/tui/: cli.go  tea.go
src/: cli.rs  config.rs  db.rs  main.rs  metrics.rs  stats.rs
src/tui/: app.rs  dashboard.rs  mod.rs  theme.rs  ui.rs
