[package]
name = "yapper"
version = "0.1.0"
edition = "2021"
description = "Yapper is a test/load client for KurrentDB (formerly EventStoreDB)"
license = "MIT"

[[bin]]
name = "yapper"
path = "src/main.rs"

[dependencies]
kurrentdb = "1.2"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
anyhow = "1"
rand = "0.8"
futures = "0.3"
tokio-util = "0.7"

[dev-dependencies]
# `test-util` enables tokio's paused clock (#[tokio::test(start_paused = true)]),
# used to test time-based logic deterministically without real sleeps.
tokio = { version = "1", features = ["test-util"] }
